fix: add mail async executor